syntax = "proto3";

option java_package = "com.cseiu.passnet.saga.recruitmentsaga";

package produceEvents;

service EventProducer {
    rpc ProducePostNewJobEvent (PostNewJobEvent) returns (SagaResponse) {}
    rpc ProduceAcceptStudentApplicationEvent (AcceptStudentApplicationEvent) returns (SagaResponse) {}
    rpc ProduceRemoveStudentApplicationEvent (RemoveStudentApplicationEvent) returns (SagaResponse) {}
    rpc ProduceDeleteJobEvent (DeleteJobEvent) returns (SagaResponse) {}
}

message SagaResponse {
    string message = 1;
}

message PostNewJobEvent {
    string ownerId = 1;
    string jobId = 2;
}

message AcceptStudentApplicationEvent {
    string jobId = 1;
    string taId = 2;
}

message RemoveStudentApplicationEvent {
    string jobId = 1;
    string taId = 2;
}

message DeleteJobEvent {
    string jobId = 1;
}